pet clinic website by using bootstrap

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- style  -->
      <link rel="stylesheet" href="CSS/style.css">
 
-    <title>Bootstrap2</title>
+    <title>Pet-Clinic-Web</title>
   </head>
   <body>
 
@@ -83,7 +83,7 @@
         </div>
         <div class="col-md-4 bannerImgDiv" id="service-img">
             <div class="corner-border-wrapper">
-              <img src="images/Are you a new pet owner looking for essential tips….jpeg" alt="" class="img-fluid" id="service-main-img">
+              <img src="images/dogClinic1.jpeg" alt="" class="img-fluid" id="service-main-img">
             </div>
         </div>
       </div>
@@ -185,12 +185,6 @@
 
     <!-- container fluid end  -->
     </div>
-
-
-
-
-
-
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
